--- a/css/style.css
+++ b/css/style.css
@@ -15,23 +15,25 @@ a {
   text-decoration: none;
 }
 
-.main-navigation a{
+.main-navigation a {
   color: #ffffff;
-  background-color: #849d8f;
 
 }
-.site-navigation a{
+
+.site-navigation a {
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
 
 }
 .site-navigation a:hover,
-.site-navigation a:focus
- {
+.site-navigation a:focus {
   color: #333333;
   background-color: #f7f6f3;
   border-radius: 10px;
 }
 
+.visually-hidden {
+    display: none;
+}
 
 .catalog-navigation,
 .site-navigation,
@@ -39,8 +41,8 @@ a {
 .search-list,
 .login-list,
 .login-window,
-.backet-list,
-.product-icecream,
+.basket-list,
+.product-icecream,    /*Склоняюсь к тому, что так делать не совсем красиво*/
 .advantages-list,
 .social-list,
 .additional-list,
@@ -48,7 +50,139 @@ a {
 .breadcrumbs,
 .fatness-list,
 .add-list,
-.pagination
-{
+.pagination,
+.basket-table {
   list-style: none;
+}
+/* ------------------------------------------------*/
+.search-logo {
+display: inline-block;
+  width: 33px;
+  height: 33px;
+  background-color: #a0b5a9;
+  border-radius: 50%;                           /*В этом задании не надо задавать размеры и вставлять svg вроде бы, сделал наперед*/
+  background-image: url("../img/loupe.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.search-logo:hover {
+  background-color: #f8f7f4;
+  background-image: url("../img/loupe-black.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.search-window {
+  width: 341px;
+  height: 84px;
+  font-size: 16px;
+  line-height: 18px;
+  background-color: #f8f7f4;
+  border-radius: 5px;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
+}
+.search-window input {
+  border: 1px solid #d3d3d2;
+  border-radius: 5px;
+  background-color: #ffffff;
+}
+.login-link {
+  display: inline-block;
+  width: 92px;
+  height: 32px;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: bold;
+  background-color: #a0b5a9; /* вот здесь не понял, как выровнить текст "вход" по макету*/
+  border-radius: 20px;
+  text-align: right;
+  background-image: url("../img/entrance-white.svg");
+  background-position: 16px 6px;
+  background-repeat: no-repeat;
+}
+.login-link:hover {
+  color: #323232;
+  background-color: #f8f7f4;
+  background-image: url("../img/entrance.svg");
+  background-position: 16px 6px;
+  background-repeat: no-repeat;
+}
+.login-window {
+  width: 227px;
+  height: 214px;
+  background-color: #f8f7f4;
+  border-radius: 5px;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
+}
+.login-window input {
+  font-size: 16px;
+  line-height: 18px;
+  border: 1px solid #d3d3d2;
+  border-radius: 5px;
+  background-color: #ffffff;
+}
+.login-window .login-problem {
+  color: #323232;
+  text-decoration: underline;
+}
+
+.login-window input:hover {
+  border: 1px solid #c7c6c5;
+}
+.login-window input:focus {
+  border: 1px solid #8fbdec;
+}
+.login-window input:focus {  /*Не знаю как задать параметры, когда курсор внутри поля.*/
+  border: 1px solid #d3d3d2;
+  font-weight: bold;
+}
+
+
+.button {
+  font-weight: bold;
+  color: #fefefe;
+  text-align: center;
+  vertical-align: middle;
+  background-image: linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
+  box-shadow: 0px 1px 2px 0px #ac1000;
+  border: none;
+
+}
+
+.sign-in {
+  width: 102px;
+  height: 46px;
+  font-size: 18px;
+  line-height: 24px;
+  border-radius: 25px;
+}
+
+.basket {
+  display: inline-block;
+  width: 100px;
+  height: 32px;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: bold;
+  border-radius: 20px;
+  background-color: #a0b5a9;
+  background-image: url("../img/basket.svg");
+  background-position: 16px 6px;
+  background-repeat: no-repeat;
+}
+
+.contact-information-top {
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: bold;
+}
+.phone-number {
+  font-size: 22px;
+  line-height: 24px;
+}
+
+
+.slider-top p {
+  font-size: 60px;
+  line-height: 60px;
+  font-weight: bold;
 }
