--- a/css/style.css
+++ b/css/style.css
@@ -356,3 +356,58 @@ display: inline-block;
   line-height: 24px;
   font-weight: bold;
 }
+
+.social-button {
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  border: 3px solid #c2cec7;
+  border-radius: 50%;
+}
+
+                                      /* <цвет фона социальных кнопок отличается от макета, что-то не понимаю, как исправить> */
+.twitter {
+  background-image: url('../img/twitter.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.instagram {
+  background-image: url('../img/instagram.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.facebook {
+  background-image: url('../img/fb.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.vk {
+  background-image: url('../img/vk.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.additional-list a {
+  font-size: 13px;
+  line-height: 18px;
+  color: #ffffff;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+}
+
+.for-providers {
+  font-weight: bold;
+}
+
+.footer-copyright {
+  font-size: 12px;
+  line-height: 18px;
+  color: #ffffff;
+}
+
+.footer-copyright a:last-child {
+  color: #ffffff;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+}
