--- a/css/style.css
+++ b/css/style.css
@@ -19,22 +19,48 @@ body {
 }
 
 .site-navigation a {
-  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+  display: block;
+  font-weight: bold;
 }
 
 .main-menu {
-  position: relative;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
 }
 
-.main-menu:hover,
+.site-navigation-item {
+  margin-right: 0;
+  padding: 7px 14px;
+
+}
+
+/* .main-menu:hover,
 .main-menu:focus {
   color: #333333;
   background-color: #f7f6f3;
-  border-radius: 10px;
+} */
+
+.site-navigation-item:hover,
+.site-navigation-item:focus {
+  background-color: #f7f6f3;
+  border-radius: 30px;
 }
 
-.visually-hidden {
-    display: none;
+.site-navigation-item:hover .main-menu,
+.site-navigation-item:focus .main-menu {
+  color: #333333;
+}
+
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .catalog-navigation,
@@ -51,17 +77,31 @@ body {
 .pagination {
   list-style: none;
 }
+.submenu-container {
+  position: relative;
+}
 
 .catalog-navigation {
-  display: inline-block;
   position: absolute;
   display: none;
   width: 143px;
-  height: 171px;
+  top: 37px;
+  left: -7px;
   font-size: 14px;
   line-height: 16px;
   color: #323232;
   background-color: #f8f7f4;
+  text-align: left;
+  padding: 0;
+  margin: 0;
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+  vertical-align: middle;
+  border: 1px solid #c2cec7;
+  border-radius: 5px;
+}
+
+.catalog-navigation li {
+  padding: 0 20px;
 }
 
 .site-navigation >li:hover .catalog-navigation {
@@ -69,10 +109,19 @@ body {
 }
 
 .catalog-navigation a {
+  font-weight: normal;
   color: #323232;
+  padding-top: 6px;
+  padding-bottom: 6px;
 }
 
-.catalog-navigation li:first-child {
+.catalog-navigation .new {
+  font-weight: bold;
+  padding-top: 11px;
+  padding-bottom: 11px;
+}
+
+.catalog-navigation .new {
   font-weight: bold;
   border-bottom: 1px solid #d1d0ce;
 }
@@ -292,8 +341,10 @@ body {
 
 .slider-top p {
   font-size: 60px;
-  line-height: 60.35px;
+  line-height: 60px;
   font-weight: bold;
+  margin: 0;
+  margin-bottom: 30px;
 }
 
 .slider-top .button {
@@ -302,22 +353,18 @@ body {
 }
 
 .first-offers {
-  width: 560px;
-  height: 229px;
   background-image: url('../img/raspberries-background.jpg');
   background-repeat: no-repeat;
-  border-radius: 15px;
+  border-radius: 20px;
   font-size: 18px;
   line-height: 22px;
   font-weight: bold;
 }
 
 .second-offers {
-  width: 560px;
-  height: 229px;
   background-image: url('../img/chocolate-background.jpg');
   background-repeat: no-repeat;
-  border-radius: 15px;
+  border-radius: 20px;
   font-size: 18px;
   line-height: 22px;
   font-weight: bold;
@@ -326,6 +373,7 @@ body {
 .offers-caption {
   font-size: 35px;
   line-height: 41px;
+  margin: 0;
 }
 
 .offers-buttton {
@@ -338,29 +386,72 @@ body {
 }
 
 .icecream {
+  display: block;
   color: #ffffff;
+  font-weight: bold;
+  position: relative;
+}
+
+.icecream-price {
   font-size: 45px;
   line-height: 45px;
-  font-weight: bold;
 }
 
 .icecream-kilo {
   font-size: 30px;
 }
 
-.icecream-name {
+ .icecream-name {
+  /* transform: translateY(-60px); */
+  margin-bottom: 10px;
+  padding-bottom: 0;
+  margin-top: -40px;   /*Найти другое решение*/
+}
+
+.icecream-name span {
   font-size: 16px;
   line-height: 22px;
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
+.icecream-price {
+  margin: 0;
+  padding: 0;
+  text-align: left;
+  vertical-align: middle;
+  transform: translateY(-60px);
+  text-shadow: 1px 1px 3px rgba(49, 50, 53, 0.5);
+}
+/* .icecream-name span {
+  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+} */
+
 .product-icecream .button {
+  display: none;
   font-size: 18px;
   line-height: 24px;
+  padding: 13px 17px;
+  border-radius: 30px;
+  text-align: center;
 }
 
 .product-icecream li:hover {
   background-color: #9bafa3;
+  box-shadow:
+  0 0 0 13px #9bafa3,
+  0 20px 40px rgba(0, 0, 0, 0.4);
+  border-radius: 1px;
+}
+
+.product-icecream li:hover .button {
+  display: block;
+  position: relative;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  /* transform: translateY(-50px); */
 }
 
 .advantages {
@@ -383,8 +474,7 @@ body {
 }
 
 .blog {
-  width: 560px;
-  height: 220px;
+  width: 48%;
   font-size: 16px;
   line-height: 22px;
   color: #323232;
@@ -402,15 +492,16 @@ body {
 }
 
 .subscription {
-  width: 548px;
-  height: 210px;
+  width: 48%;
   font-size: 16px;
   line-height: 22px;
   color: #5a5a5a;
   background-color: #f8f7f4;
   background-origin: content-box;
-  border-image-width: 5px;
-  border-image-source: url('../img/bg-post.svg');
+  border: 6px solid black;
+  border-radius: 10px;
+  /* border-image-width: 6px; */
+  /* border-image-source: url('../img/bg-post.svg'); */
 }
 
 .subscription input {
@@ -429,15 +520,15 @@ body {
 }
 
 .map {
-  width: 1250px;
-  height: 430px;
+   /*Не понимаю, почему без высоты карты отображается не полностью*/
   background-image: url('../img/map.jpg');
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin-top: 40px;
 }
 
 .contact-information {
-  width: 302px;
-  height: 305px;
   font-size: 14px;
   line-height: 20px;
   color: #323232;
@@ -449,6 +540,17 @@ body {
   font-size: 18px;
   line-height: 24px;
   font-weight: bold;
+  /* margin: 0;
+  padding: 0; */
+}
+
+.phone {
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: bold;
+  margin-top: 6px;
+  padding: 0;
+  margin-bottom: 0;
 }
 
 /* .contact-information p:nth-child(4) {
@@ -463,6 +565,9 @@ body {
   font-size: 18px;
   line-height: 24px;
   font-weight: bold;
+  padding: 11px 28px;
+  border-radius: 30px;
+  margin-top: 24px;
 }
 
 .social-button {
@@ -547,8 +652,8 @@ body {
   border: none;
 }
 
-.icecream-name:hover,
-.icevream-name:active {
+.icecream-name span:hover,
+.icecream-name span:active {
   color: #ffbc9e;
   border-bottom: 2px solid rgba(255, 188, 158, 0.2);
 }
@@ -593,69 +698,49 @@ body {
 
 html,
 body {
-  min-width: 1200px;      /* Сомневаюсь на счет позиционарования номера телефона и графика работы
-                                  в шапке страницы. Поизионировать ее на флексбоксе или же другим способом?*/
-  min-height: 2400px;
+  /* min-width: 1200px; */
 }
 
  .container {
    width: 1200px;
-   padding-left: 27px;
-   padding-right: 27px;
-   padding-top: 9px;
    padding: 0 27px;
-   padding-top: 9px;
    margin: 0 auto;
  }
 
 .main-header {
-  min-height: 104px;
-  margin-bottom: 20px;
-  margin: 0 auto;
+  position: relative;
 }
 
 .main-navigation {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  margin: 0 auto;
-  width: 1200px;
-  /* padding-left: 27px; */
-  /* padding-right: 27px; */
-  /* padding-top: 9px; */
+  justify-content: flex-start;
   padding: 0 27px;
-  padding-top: 9px;
   margin: 0 auto;
 }
 
 .main-header-logo {
-  width: 154px;
-  height: 64px;
-  margin: 0;
-  margin-left: 27px;
-}
-
-.main-navigation-wrapper {
-  width: 100%;
-  background-color: #849d8f;
-  background-color: transparent;
-}
-
-.main-navigation-wrapper {
-  display: flex;
-  justify-content:space-between;
+   margin: 0;
+   padding: 0;
+   padding-top: 9px;
 }
 
 .site-navigation {
   margin: 0;
   padding: 0;
-  width: 560px;
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 21px;
+  padding-left: 10px;
 }
 
 .user-navigation {
-  width: 380px;
   margin: 0;
   padding: 0;
+  display: flex;
+  margin-left: auto;
+  padding-top: 23px;
 }
 
 .second-slide,
@@ -665,92 +750,112 @@ body {
 }
 
 .slider {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 881px;
-  margin: 0 auto;
-  margin-top: -200px;
-  margin-bottom: -500px;
+  margin-top: -72px;
 }
 
 .slider-top {
-  min-height: 881px;
-  width: 1079px;
-  margin: 0 auto;
+  text-align: center;
 }
 
 .caption-slide {
-  position: relative;
-  width: 680px;
-  min-height: 116px;
-  margin: 0 auto;
-  padding: 0;
-  bottom: 550px;
   text-align: center;
+  margin-top: -492px;
+  margin-bottom: 66px;
 }
 
 .offers-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 1146px;
-  margin: auto;
+  margin: 0 auto;
+  padding: 0 27px;
   margin-bottom: 40px;
 }
 
 .first-offers,
 .second-offers {
-  width: 560px;
-  min-height: 229px;
+  width: 48.87%;
+  box-sizing: border-box;
+  padding: 18px 28px 36px 18px;
+  background-size: cover;
+}
+
+.first-offers p,
+.second-offers p {
+  margin-top: 16px;
+  margin-bottom: 50px;
+}
+
+.offers-btn {
+  padding: 13px 24px;
+  border-radius: 30px;
 }
 
 .product-icecream {
-  margin: 0 auto;
-  padding: 0;
-  width: 1146px;
+  /* width: 100%; */
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
+  padding: inherit;
+  margin: 0 auto;
 }
 
 .product-icecream li {
   text-align: center;
-  min-height: 400px;
-  width: 280px;
+  width: 267px;
+  padding: 0;
+  margin: 0;
 }
 
 .other-info-wrapper {
-  margin: auto;
+  /* margin: 0 auto; */
+  padding: inherit;
   margin-top: 40px;
-  width: 1146px;
-  min-height: 567px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
   flex-wrap: wrap;
 }
 
 .advantages {
-  margin: 0 auto;
-  padding: 0;
-  width: 1146px;
+  margin-bottom: 40px;
+  /* margin: 0 auto; */
+  /* padding: 0; */
+  /* width: 1146px; */
 }
 
-.subscription,
+.advantages-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.advantages-list li {
+  width: 48%;
+}
+
+/* .subscription,
 .blog {
   align-self: flex-end;
-}
-
+} */
 .map {
-  margin-top: 40px;
+  padding: 0;
+  padding-top: 63px;
+  padding-bottom: 63px;
 }
 
-.contact-information {
-  position: relative;
-  left: 871px;
-  top: 62px;
+.container .contact-information {
+  /* position: relative; */
+  width: 302px;
+  margin-left: auto;
+  margin-right: 27px;
+  padding-left: 24px;
+  padding-top: 32px;
+  padding-bottom: 30px;
+  padding-right: 0;
+    /* left: 871px;
+    top: 62px; */
 }
 
 .main-footer {
@@ -859,4 +964,22 @@ body {
   padding: 0;
   margin: 0;
   margin-left: 27px;
+}
+
+.user-navigation-item {
+  margin-left: 10px;
+}
+
+.contact-information-top {
+  position: absolute;
+  top: 100%;
+  right: 54px;
+  text-align: right;
+
+}
+
+.contact-information-top p {
+  padding: 0;
+  margin: 0;
+  padding-bottom: 6px;
 }
